--- a/src/stylesheets/components/_bio.scss
+++ b/src/stylesheets/components/_bio.scss
@@ -4,18 +4,21 @@
     //grid-column-gap: 10%;
     align-items: center;
     justify-items: center;
-    background-image: url(../images/white-marble.jpg);
+    //background-image: url(../images/white-marble.jpg);
     background-position: center;
     background-size: cover;
 }
 
 .bio__foto {
-    max-width: 18rem;
+    max-width: 22rem;
     text-align: center;
     margin: 3rem 0 5rem;
 
     img {
         border-radius: 50%;
+        //border: 0.5rem solid hsl(0, 0%, 75);
+        //mix-blend-mode: multiply;
+        filter: grayscale(0.75);
     }
 
     figcaption {
