--- a/src/stylesheets/components/_bio.scss
+++ b/src/stylesheets/components/_bio.scss
@@ -4,7 +4,7 @@
     //grid-column-gap: 10%;
     align-items: center;
     justify-items: center;
-    //background-image: url(../images/white-marble.jpg);
+    background-image: url(../images/white-marble.jpg);
     background-position: center;
     background-size: cover;
 }
