--- a/src/stylesheets/components/_bio.scss
+++ b/src/stylesheets/components/_bio.scss
@@ -10,7 +10,7 @@
 }
 
 .bio__foto {
-    max-width: 30rem;
+    //max-width: 35rem;
     text-align: center;
     margin: 3rem 0 3rem;
     //background-color: $c-primary;
@@ -19,8 +19,8 @@
         //border-radius: 50%;
         //border: 0.5rem solid hsl(0, 0%, 75);
         //mix-blend-mode: multiply;
-        filter: grayscale(0.25);
-        border: 0.5rem solid $c-primary;
+        //filter: grayscale(0.25);
+        //border: 0.5rem solid $c-primary;
     }
 
     figcaption {
